# polygon-arbitrage-bot

./: .gitignore  Cargo.toml  README.md  Vishal_Patel_AiDP_SRE_Resume.tex  Vishal_Patel_Resume_ThomsonReuters_Salesforce.tex  arbitrage.db  config.json
src/: main.rs
