[package]
name = "polygon-arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }